import "google/protobuf/empty.proto";

option go_package = "github.com/softnetics/dotlocal/api";

service DotLocal {
  rpc CreateMapping (CreateMappingRequest) returns (google.protobuf.Empty) {}
}

message CreateMappingRequest {
  required string host = 1;
  required string path_prefix = 2;
  required string target = 3;
}
